# clangen-pronouns

./: main.py  pronouns.py  pyproject.toml  run.sh
